--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,25 @@ body {
 .one,
 .two, 
 .three, 
-.four {
+.four,
+.img-container,
+.images {
     display: flex;
-    flex-direction: column;
+    align-items: center;
 }
 
 .one {
     background-color: #1F2937;
+}
+
+.two,
+.img-container {
+    flex-direction: column;
+}
+
+.one-left {
+    display: flex;
+    flex-direction: column;
 }
 
 .hero {
@@ -71,4 +83,25 @@ button {
 
 .main-image {
     color: #E5E7EB;
+}
+
+.two-header {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.img {
+    border: 2px solid blue;
+    flex-shrink: 0;
+    width: 100px;
+    height: 100px;
+}
+
+.images {
+    gap: 30px;
+}
+
+.img-container {
+    width: 100px;
 }
