--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Roboto, sans-serif;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -13,6 +17,7 @@ body {
 .footer {
     background-color: #1F2937;
     color: #E5E7EB;
+    padding: 10px;
 }
 
 .header-logo {
@@ -23,6 +28,7 @@ body {
 .header-links a {
     color: #E5E7EB;
     font-size: 18px;
+    padding: 15px;
 }
 
 .header-links {
