Finish fourth section

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ body {
 .four,
 .img-container,
 .images,
-.one-left {
+.one-left,
+.four-text {
     display: flex;
     align-items: center;
     gap: 15px;
@@ -67,7 +68,8 @@ body {
 .two,
 .img-container,
 .one-left,
-.three {
+.three,
+.four-text {
     flex-direction: column;
 }
 
@@ -135,11 +137,33 @@ button {
     font-style: italic;
     font-size: 36px;
     color: #1F2937;
+    flex-wrap: wrap;
     font-weight: thin;      /* not working */
 }
 
 .quote-attribution {
-    font-size 24px;
+    font-size: 18px;
     font-weight: bold;
     margin-left: auto;
+}
+
+.four {
+    margin: 75px auto;
+    background-color: #3882F6;
+    border-radius: 10px;
+}
+
+.four button {
+    border: 2px solid white;
+    padding: 5px;
+}
+
+.four-text {
+    align-items: flex-start;
+    color: #E5E7EB;
+}
+
+.call-to-action {
+    font-size: 18px;
+    font-weight: bold;
 }
